Major refactoring in backend: * removed protobuf in favor of simple DTO * fixed controllers tests