@@ -1,10 +1,10 @@
 package md.ramaiana.foodmarket.controller;
 
-import com.google.protobuf.InvalidProtocolBufferException;
-import com.google.protobuf.util.JsonFormat;
+import md.ramaiana.foodmarket.controller.dto.products.GroupDto;
+import md.ramaiana.foodmarket.controller.dto.products.ProductDto;
+import md.ramaiana.foodmarket.controller.dto.products.ProductListResponseDto;
 import md.ramaiana.foodmarket.model.Product;
 import md.ramaiana.foodmarket.model.ProductGroup;
-import md.ramaiana.foodmarket.proto.Products;
 import md.ramaiana.foodmarket.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -14,81 +14,77 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static java.util.Collections.emptyList;
 
 @RestController
-@RequestMapping("/good")
+@RequestMapping("/product")
 public class ProductController {
 
     private final ProductService productService;
-    private final JsonFormat.Printer printer;
 
     @Autowired
     public ProductController(ProductService productService) {
         this.productService = productService;
-        this.printer = JsonFormat.printer().omittingInsignificantWhitespace();
     }
 
     @GetMapping("/listGroups")
-    public ResponseEntity<?> getGroupsByParent(@RequestParam(value = "parentGroupId", required = false) Integer parentGroupId) throws InvalidProtocolBufferException {
+    public ResponseEntity<?> getGroupsByParent(@RequestParam(value = "parentGroupId", required = false) Integer parentGroupId) {
         List<ProductGroup> groups = productService.getGroupsHierarchy(parentGroupId);
-        return ResponseEntity.ok(printer.print(buildGoodsListResponse(Collections.emptyList(), groups)));
+        return ResponseEntity.ok(buildProductsListResponse(emptyList(), groups));
     }
 
-    @GetMapping("/listGoods")
-    public ResponseEntity<?> getGoodsByGroup(@RequestParam("groupId") Integer groupId,
-                                             @RequestParam(value = "brandId", required = false) Integer brandId,
-                                             @RequestParam(value = "name", required = false) String nameLike) throws InvalidProtocolBufferException {
+    @GetMapping("/listProducts")
+    public ResponseEntity<?> getProductsByGroup(@RequestParam("groupId") Integer groupId,
+                                                @RequestParam(value = "brandId", required = false) Integer brandId,
+                                                @RequestParam(value = "name", required = false) String nameLike) {
         List<Product> products = productService.findProductsFiltered(groupId, brandId, nameLike);
-        return ResponseEntity.ok(printer.print(buildGoodsListResponse(products, Collections.emptyList())));
+        return ResponseEntity.ok(buildProductsListResponse(products, emptyList()));
     }
 
     @GetMapping("/search")
-    public ResponseEntity<?> searchGoods(@RequestParam(value = "groupId", required = false) Integer groupId,
-                                         @RequestParam(value = "brandId", required = false) Integer brandId,
-                                         @RequestParam(value = "name", required = false) String nameLike) throws InvalidProtocolBufferException {
+    public ResponseEntity<?> searchProducts(@RequestParam(value = "groupId", required = false) Integer groupId,
+                                            @RequestParam(value = "brandId", required = false) Integer brandId,
+                                            @RequestParam(value = "name", required = false) String nameLike) {
         List<Product> products = productService.findProductsFiltered(groupId, brandId, nameLike);
         List<ProductGroup> groups = productService.findProductsForProductsList(products);
-        return ResponseEntity.ok(printer.print(buildGoodsListResponse(products, groups)));
+        return ResponseEntity.ok(buildProductsListResponse(products, groups));
     }
 
-    private Products.GoodsListResponse buildGoodsListResponse(List<Product> products, List<ProductGroup> groups) {
-        return Products.GoodsListResponse.newBuilder()
-                .addAllProducts(mapGoodsToProto(products))
-                .addAllGroups(mapGroupsToProto(groups))
-                .build();
+    private ProductListResponseDto buildProductsListResponse(List<Product> products, List<ProductGroup> groups) {
+        return new ProductListResponseDto(
+                products.stream().map(this::toDto).toList(),
+                toDto(groups)
+        );
     }
 
-    private List<Products.Product> mapGoodsToProto(List<Product> products) {
-        return products.stream().map(good -> Products.Product.newBuilder()
-                .setId(good.getId())
-                .setName(good.getName())
-                .setBrandId(good.getBrandId())
-                .setGroupId(good.getGroupId())
-                .setUnit(good.getUnit())
-                .setPackage(good.getInPackage())
-                .setBarCode(good.getBarCode())
-                .setWeight(good.getWeight())
-                .setPrice(good.getPrice())
-                .build()).collect(Collectors.toList());
+    private ProductDto toDto(Product product) {
+        return new ProductDto(
+                product.getId(),
+                product.getName(),
+                product.getPrice(),
+                product.getGroupId(),
+                product.getBrandId(),
+                product.getInPackage(),
+                product.getBarCode(),
+                product.getUnit(),
+                product.getWeight());
     }
 
-    private List<Products.Group> mapGroupsToProto(List<ProductGroup> groups) {
-        List<Products.Group> protoGroups = new ArrayList<>();
+    private List<GroupDto> toDto(List<ProductGroup> groups) {
+        List<GroupDto> groupDtos = new ArrayList<>();
         for (ProductGroup group : groups) {
-            List<Products.Group> childrenProto = null;
-            if (group.hasChildren()) {
-                childrenProto = mapGroupsToProto(group.getChildGroups());
-            }
-            Products.Group protoGroup = Products.Group.newBuilder()
-                    .setId(group.getId())
-                    .setName(group.getName())
-                    .addAllGroups(childrenProto != null ? childrenProto : Collections.emptyList())
-                    .build();
-            protoGroups.add(protoGroup);
+            List<GroupDto> children = group.hasChildren() ?
+                    toDto(group.getChildGroups()) :
+                    List.of();
+            groupDtos.add(new GroupDto(
+                    group.getId(),
+                    group.getName(),
+                    children,
+                    List.of()
+            ));
         }
-        return protoGroups;
+        return groupDtos;
     }
 }
